Moved text around

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p>Willkommen bei SquareGame</p>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
     <script src="../js/welcome.js"></script>
 </body>
 </html>
