--- a/public/css/game.css
+++ b/public/css/game.css
@@ -1,24 +1,19 @@
 body {
     margin: 0;
-    background: #bbb;
+    background: #24292e;
     height: 100vh;
     width: 100vw;
     /*overflow: hidden;*/
     font-family: Arial, Helvetica, sans-serif;
 }
 canvas {
-    background: #ddd;
+    background: #24292e;
     position: absolute;
     top: 50px;
     left: 350px;
     z-index: 0;
     height: 850px;
     width: 850px;
-}
-#brush {
-    position: absolute;
-    top: 50px;
-    right: 50px;
 }
 .window {
     margin: auto;
@@ -76,4 +71,31 @@ canvas {
 }
 .entityName {
     margin: auto;
+}
+#sidebar {
+    border-right: 2px solid #1b1f23;
+    display: flex;
+    flex-direction: column;
+    width: 50px;
+    height: 100vh;
+    background: #24292e;
+}
+input[type="color"] {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+.sideBarOption {
+    background-image: url(../svg/entities/green/bit.svg);
+    height: 50px;
+    width: 50px;
+}
+.sideBarOption:hover {
+    cursor: pointer;
+}
+.sboa {
+    border-left: 2px solid #f9826c;
+}
+#shop {
+    background-image: url(../svg/undefined/store-solid.svg);
 }
