--- a/public/templates/join.html
+++ b/public/templates/join.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SquareGame - Welcome</title>
+    <title>Join</title>
 </head>
 <body>
-    <p>Willkommen bei SquareGame</p>
-    <a href="./log.html">Einloggen</a>
-    <a href="./join.html">Join</a>
-    <script src="../js/welcome.js"></script>
+    <input type="text">
 </body>
 </html>
