--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -7,6 +7,13 @@
     <title>SG - Registieren</title>
 </head>
 <body>
-    
+    <p>Registieren Sie sich</p>
+    <input type="text" placeholder="Name" id="name">
+    <label for="name">Name</label><br><br>
+    <input type="password" id="password" placeholder="Password">
+    <label for="password">Password</label><br><br>
+    <input type="password" id="confirmPassword" placeholder="Confirm Password">
+    <label for="confirmPassword">Confirm Password</label><br><br>
+    <button id="createAcc">Create Account</button>
 </body>
 </html>
